# qregexp-editor

./: .gitignore  ABOUT.html  AUTHORS  AUTHORS.html  CMakeLists.txt  CPackConfig.cmake  INSTALL  README.txt  application.qrc  compile-win32.bat  qregexp-editor.pro  qregexp_editor-version.cpp.in  regexpeditor.pro
cmake/: QtMacros.cmake
forms/: aboutdialog.ui  escapedpatterndialog.ui  mainwindow.ui
scripts/: astyle-qregexp_editor  astyle-qregexp_editor.bat
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  constants.h  escapedpatterndialog.cpp  escapedpatterndialog.h  main.cpp  mainwindow.cpp  mainwindow.h  node.cpp  node.h  parentheseshighlighter.cpp  parentheseshighlighter.h  patternfilter.cpp  patternfilter.h  qregexp_editor-version.h  regexpmodel.cpp  regexpmodel.h  regexptextedit.cpp  regexptextedit.h  regexptextedit_p.cpp  regexptextedit_p.h  searchdata.cpp  searchdata.h  searchsettings.cpp  searchsettings.h  treeitem.cpp  treeitem.h
src/preferences/: preferencesdialog.cpp  preferencesdialog.h  preferencespageinterface.h  regexpoptions.cpp  regexpoptions.h  regexppreferencespage.cpp  regexppreferencespage.h  regexpsettings.cpp  regexpsettings.h  settingsinterface.cpp  settingsinterface.h
src/tests/: CMakeLists.txt  patternfiltertest.h
src/ui/: aboutdialog.ui  escapedpatterndialog.ui  mainwindow.ui
translations/: qregexp-editor_de.ts  qregexp-editor_fa.ts  qregexp-editor_ru.ts  regexpeditor_de.qm  regexpeditor_de.ts
